--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,3 +1,10 @@
+
+<% if @game.current_turn == @game.player_1 %>
 <%= @game.player_1.name %> attacked <%= @game.player_2.name %>
-<%= @game.player_2.name %>: <%= @game.player_2.hit_points %>HP
-<%= @game.current_turn.name %>'s turn
+<% else %>
+<%= @game.player_2.name %> attacked <%= @game.player_1.name %>
+<% end %>
+
+<form action="/switch" method="post">
+  <input type="submit" value="OK">
+</form>
