Implemented winning/losing view and refactored code

--- a/views/play.erb
+++ b/views/play.erb
@@ -4,6 +4,6 @@
 
 <%= @game.player_2.name %>: <%= @game.player_2.hit_points %>HP
 
-<%= @game.current_turn.name %>'s turn
+<%= @game.current_player.name %>'s turn
 
 <a href="/attack">Attack!</a>
